syntax="proto3";

message DBItemData {
	int32 type_id = 1;
	int64 unique_id = 2;
	int32 num = 3;
}

message DBItemDataList {
	map<int64, DBItemData> items = 1;
}

message DBSkillData {
	int32 skill_id = 1;
	int32 level = 2;
}

message DBSkillDataList {
	map<int32, DBSkillData> skills = 1;
}

message DBTaskData {
	int32 task_id = 1;
	int32 task_state = 2;
	int32 task_param = 3;
	int32 task_param2 = 4;
}

message DBTaskDataList {
	map<int32, DBTaskData> tasks = 1;
}

message DBDailyTaskData {
	int32 task_id = 1;
	int32 task_state = 2;
	int32 task_param = 3;
}

message DBDailyTaskDataList {
	map<int32, DBDailyTaskData> daily_tasks = 1;
}

message DBActivityData {
	int32 activity_id = 1;
	int32 activity_state = 2;
}

message DBActivitiesDataList {
	map<int32, DBActivityData> activities = 1;
}
